--- a/RoadToTesting/pom.xml
+++ b/RoadToTesting/pom.xml
@@ -70,6 +70,15 @@
             <version>1.9.6</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
