--- a/RoadToTesting/pom.xml
+++ b/RoadToTesting/pom.xml
@@ -70,6 +70,12 @@
             <version>1.9.6</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
