--- a/RoadToTesting/pom.xml
+++ b/RoadToTesting/pom.xml
@@ -26,6 +26,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -34,11 +40,8 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>2.2</version>
-        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
 
